--- a/app/src/main/res/layout/activity_view_pager.xml
+++ b/app/src/main/res/layout/activity_view_pager.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light_rose"
+    android:background="@color/white"
     tools:context=".ui.viewPager.ViewPagerActivity">
 
     <com.google.android.material.button.MaterialButton
