--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,7 +13,11 @@
         android:id="@+id/navigation_catalog"
         android:name="com.maksapp.pinskdrev.ui.catalog.CatalogFragment"
         android:label="fragment_catalog"
-        tools:layout="@layout/fragment_catalog" />
+        tools:layout="@layout/fragment_catalog" >
+        <action
+            android:id="@+id/action_navigation_catalog_to_navigation_product"
+            app:destination="@id/navigation_product" />
+    </fragment>
     <fragment
         android:id="@+id/navigation_home"
         android:name="com.maksapp.pinskdrev.ui.home.HomeFragment"
@@ -24,4 +28,9 @@
         android:name="com.maksapp.pinskdrev.ui.orders.OrdersFragment"
         android:label="fragment_orders"
         tools:layout="@layout/fragment_orders" />
+    <fragment
+        android:id="@+id/navigation_product"
+        android:name="com.maksapp.pinskdrev.ui.product.ProductFragment"
+        android:label="fragment_product"
+        tools:layout="@layout/fragment_product" />
 </navigation>
