--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -32,5 +32,9 @@
         android:id="@+id/navigation_product"
         android:name="com.maksapp.pinskdrev.ui.product.ProductFragment"
         android:label="fragment_product"
-        tools:layout="@layout/fragment_product" />
+        tools:layout="@layout/fragment_product" >
+        <action
+            android:id="@+id/action_navigation_product_to_navigation_catalog"
+            app:destination="@id/navigation_catalog" />
+    </fragment>
 </navigation>
