--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -36,5 +36,17 @@
         <action
             android:id="@+id/action_navigation_product_to_navigation_catalog"
             app:destination="@id/navigation_catalog" />
+        <action
+            android:id="@+id/action_navigation_product_to_detailFragment"
+            app:destination="@id/detailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/detailFragment"
+        android:name="com.maksapp.pinskdrev.ui.detail.DetailFragment"
+        android:label="fragment_detail"
+        tools:layout="@layout/fragment_detail" >
+        <action
+            android:id="@+id/action_detailFragment_to_navigation_product"
+            app:destination="@id/navigation_product" />
     </fragment>
 </navigation>
