--- a/app/src/main/res/layout/layout_product_item.xml
+++ b/app/src/main/res/layout/layout_product_item.xml
@@ -8,24 +8,28 @@
     app:cardCornerRadius="10dp"
     app:cardElevation="10dp">
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/image_view_product"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="fitXY" />
+            android:layout_width="130dp"
+            android:layout_height="130dp"
+            android:scaleType="fitXY"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:background="@color/light_rose"
+            android:background="@color/light_brown_item"
             android:orientation="horizontal"
-            android:padding="10dp">
+            android:padding="10dp"
+            app:layout_constraintBottom_toBottomOf="parent">
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -41,16 +45,8 @@
                     android:text="Name of product"
                     android:textColor="@color/black"
                     android:textSize="20dp" />
-
-                <TextView
-                    android:id="@+id/text_view_product_price"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="100$"
-                    android:textColor="@color/black"
-                    android:textSize="20dp" />
             </LinearLayout>
 
         </LinearLayout>
-    </RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
