--- a/app/src/main/res/layout/layout_best_deals_item.xml
+++ b/app/src/main/res/layout/layout_best_deals_item.xml
@@ -12,20 +12,7 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/overlay_color" />
-
-    <TextView
-        android:id="@+id/text_view_best_deal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:text="Popular Categories"
-        android:textColor="@color/white"
-        android:textSize="20dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/category_image" />
+        android:layout_height="match_parent" />
 
 
 </FrameLayout>
