--- a/app/src/main/res/layout/layout_popular_categories_item.xml
+++ b/app/src/main/res/layout/layout_popular_categories_item.xml
@@ -1,34 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_margin="10dp"
-    android:layout_marginBottom="8dp"
+    android:layout_width="180dp"
+    android:layout_height="150dp"
+    android:layout_margin="20dp"
     app:cardCornerRadius="10dp"
     app:cardElevation="10dp">
 
-    <LinearLayout
+    <ImageView
+        android:id="@+id/category_image"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="fitXY" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/overlay_color" />
+
+    <TextView
+        android:id="@+id/text_view_category_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="8dp">
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:text="Popular Categories"
+        android:textColor="@color/white"
+        android:textSize="20dp" />
 
-        <ImageView
-            android:id="@+id/category_image"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_gravity="center" />
-
-        <TextView
-            android:id="@+id/text_view_category_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:text="Popular Categories"
-            android:textSize="20dp" />
-
-    </LinearLayout>
 </androidx.cardview.widget.CardView>
