--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -75,6 +75,7 @@
                         android:layout_marginTop="8dp"
                         android:padding="12dp"
                         android:text="Detail Name"
+                        android:textColor="@color/black"
                         android:textSize="20dp"
                         android:textStyle="bold" />
 
@@ -91,6 +92,7 @@
                             android:gravity="center"
                             android:padding="12dp"
                             android:text="10000"
+                            android:textColor="@color/black"
                             android:textSize="18dp"
                             android:textStyle="bold" />
 
@@ -100,6 +102,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
                             android:text="руб"
+                            android:textColor="@color/black"
                             android:textSize="20dp"
                             android:textStyle="bold" />
 
@@ -124,6 +127,7 @@
                             android:gravity="center"
                             android:padding="20dp"
                             android:text="0"
+                            android:textColor="@color/black"
                             android:textSize="20dp" />
 
                         <Button
