--- a/app/src/main/res/layout/layout_action_bar.xml
+++ b/app/src/main/res/layout/layout_action_bar.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Пинскдрев"
-        android:textColor="@color/light_rose"
+        android:textColor="@color/white"
         android:gravity="center"
         style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"/>
 
