--- a/app/src/main/res/layout/layout_product_item.xml
+++ b/app/src/main/res/layout/layout_product_item.xml
@@ -17,6 +17,7 @@
             android:id="@+id/image_view_product"
             android:layout_width="130dp"
             android:layout_height="130dp"
+            android:layout_marginTop="10dp"
             android:scaleType="fitXY"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
