--- a/app/src/main/res/layout/layout_popular_categories_item.xml
+++ b/app/src/main/res/layout/layout_popular_categories_item.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="180dp"
     android:layout_height="150dp"
+    android:layout_marginLeft="10dp"
     android:layout_marginRight="20dp"
     app:cardCornerRadius="10dp"
     app:cardElevation="10dp">
