--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -61,7 +61,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="270dp"
                 android:orientation="vertical"
-                android:padding="5dp">
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp">
 
                 <TextView
                     android:layout_width="match_parent"
@@ -150,7 +151,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="440dp"
                 android:orientation="vertical"
-                android:padding="5dp">
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp">
 
                 <TextView
                     android:layout_width="match_parent"
@@ -294,7 +296,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
                 android:orientation="vertical"
-                android:padding="5dp">
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp">
 
                 <TextView
                     android:layout_width="match_parent"
@@ -337,7 +340,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
                 android:orientation="vertical"
-                android:padding="5dp">
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp">
 
                 <TextView
                     android:layout_width="match_parent"
@@ -362,13 +366,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginBottom="60dp"
+                android:gravity="center"
                 android:orientation="vertical"
                 android:padding="5dp">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
                     android:text="© 2022, ЗАО «Холдинговая компания «Пинскдрев»"
                     android:textColor="@color/light_brown"
                     android:textSize="14dp"
