--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="350dp"
         android:fitsSystemWindows="true"
+        android:padding="20dp"
         app:contentScrim="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
