--- a/app/src/main/res/layout/item_container_onboarding.xml
+++ b/app/src/main/res/layout/item_container_onboarding.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginBottom="50dp"
     android:layout_marginStart="30dp"
     android:layout_marginEnd="30dp"
-    android:orientation="vertical"
+    android:layout_marginBottom="50dp"
     android:gravity="center"
+    android:orientation="vertical"
     android:padding="20dp">
 
     <ImageView
@@ -15,8 +15,7 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:adjustViewBounds="true"
-        android:contentDescription="@string/app_name"
- />
+        android:contentDescription="@string/app_name" />
 
     <TextView
         android:id="@+id/text_title"
@@ -25,15 +24,14 @@
         android:gravity="center"
         android:text=""
         android:textSize="20dp"
-        android:textStyle="bold"
- />
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/text_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:gravity="center"
         android:text=""
-        android:textSize="18dp"
- />
+        android:textSize="18dp" />
 </LinearLayout>
