--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -27,7 +27,7 @@
         android:id="@+id/button_user_information"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Заполнить анкету"
+        android:text="Ваша информация"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_user_information" />
@@ -39,7 +39,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:text="* Для оформления заказов вам необходимо заполнить анкету о себе"
+        android:text="* Для оформления заказов вам необходимо заполнить информацию о себе"
         android:textColor="@color/light_brown"
         android:textSize="14dp"
         android:textStyle="bold"
