--- a/app/src/main/res/layout/fragment_user_information.xml
+++ b/app/src/main/res/layout/fragment_user_information.xml
@@ -99,7 +99,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="3dp"
-        android:hint="Phone:"
+        android:hint="Телефон:"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         android:textSize="17dp"
